--- a/Hudelsis_P2_AP2/Pages/Consultas/CCobros.razor
+++ b/Hudelsis_P2_AP2/Pages/Consultas/CCobros.razor
@@ -1,13 +1,15 @@
 ﻿@page "/ConsultaCobros"
-
 @using BLL
 @using Models
 
 @inject IToastService toast
+
 <div class="container shadow-lg p-3 rb-5 bg-white rounded col-md-16">
     <div class="card-img">
         <div class="card-header">
-            <h3>Consultar Cobros</h3>
+
+
+            <h3>CCobros</h3>
         </div>
 
         <div class="card-body">
@@ -80,6 +82,7 @@
     </div>
 </div>
 
+
 @code {
     public List<Cobros> CobroList { get; set; }
 
@@ -141,4 +144,5 @@
 
         }
     }
+
 }
