--- a/Hudelsis_P2_AP2/Shared/NavMenu.razor
+++ b/Hudelsis_P2_AP2/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaCobros">
+            <NavLink class="nav-link" href="/ConsultaCobros">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta de Cobros
             </NavLink>
         </li>
